--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -46,7 +46,7 @@
               </div>
             </div>
 
-            <div class="dropdown-menu">
+            <!-- <div class="dropdown-menu">
               <form class="px-4 py-3">
                 <div class="mb-3">
                   <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
@@ -69,7 +69,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">New around here? Sign up</a>
               <a class="dropdown-item" href="#">Forgot password?</a>
-            </div>
+            </div> -->
         </nav>
     </div>
     
