--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,51 +1,29 @@
-header{
-    color: black;
+ .navbar{ 
+ height: 110px; 
     width: 100%;
-    height: 100px;
-    background-color: rgb(15, 15, 15);
-    
 }
 
-.navbar{
-   height: 100px;
-   width: 100%;
-   background-color: rgb(27, 26, 26);
-   color:black;
-   /* padding-bottom: 20px; */
+
+ .navbar .navbar-brand{ 
+     margin-bottom: 29px; 
+     margin-right: 0; 
+     margin-left: 0; 
+     align-items: center; 
+    
+  }  
+    
    
-  
-}
-.navbar .navbar-brand{
-     padding-left: 750px;
-     text-align: center;
-     padding-top: 0%;
-     padding-bottom: 20px;
-     /* pointer-events: painted; */
-}
+@media (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+        margin-top: 30px;
+      }
+    }  
 
-.navbar-nav{
-    width: 20px;
-}
-.navbar ul li  {
-    padding-top: 40px;
-    margin-left: 50%;
-    margin-right: 50%;
-    padding-left: 0px;
-    padding-right: 0px;
-}
- .navbar .right-corner {
-    margin-right: 1%;
-    margin: 1px;
-    margin-bottom: 12%;
-    text-align: right;
-    color: white;
-    
-    
-    /* padding-right: 25px; */
 
-}
-.navbar .right-corner1 {
-    margin-bottom: 8%;
-    color: white;
-    
-}
+
+/* .navbar .navbar-toggler{
+    width: 10;
+    height: 10;
+}  */
