--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,78 +1,47 @@
 
-<header class="header">
 
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-dark "  >
-            <div class="container-fluid">
-              <a style="text-align: center;" class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul style="text-align: center;align-items: center;" class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">news</a>
-                  </li>
-                  
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Entaertainment</a>
-                  </li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+     
+  <div class="container-fluid mx-auto">
+    <a class="navbar-brand mx-auto  " href="#">Navbar</a>
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> 
+   </div>
+  
+    <!-- Use flexbox utility classes to change how the child elements are justified   -->
+   <div class="collapse navbar-collapse  navbar-toggler" id="navbarToggle">
+    <ul class=" nav navbar-nav ">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Home <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">News</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Entertainment</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Entertainment</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Entertainment</a>
+      </li>
+    </ul>
+  </div>
+      <!-- Show this only lg screens and up   --> --> -->
+   
+    <!-- <div class="collapse navbar-collapse justify-content-end ">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Join Us</a>
+        </li>
+      </ul>
 
-                  <li class="nav-item">
-                    <a class="nav-link active">media</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">life</a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">video</a>
-                  </li>
-                </ul>
-                 
-                <div  class="right-corner">
-                 <li>
-                   <a  href="">Login</a> 
-                </li> 
-              
-                  <li>
-                    <a style="color: white;" href="#">Join f</a>
-                  </li>
-                </div>
-               
-              </div>
-            </div>
-
-            <!-- <div class="dropdown-menu">
-              <form class="px-4 py-3">
-                <div class="mb-3">
-                  <label for="exampleDropdownFormEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-                </div>
-                <div class="mb-3">
-                  <label for="exampleDropdownFormPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
-                </div>
-                <div class="mb-3">
-                  <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                    <label class="form-check-label" for="dropdownCheck">
-                      Remember me
-                    </label>
-                  </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
-              </form>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">New around here? Sign up</a>
-              <a class="dropdown-item" href="#">Forgot password?</a>
-            </div> -->
-        </nav>
-    </div>
-    
-
-
-</header>
+    </div> -->
+  </nav>
+  
