--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,62 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="collapse navbar-collapse w-100 order-1 order-lg-0" id="navbarNav">
+      <ul class="navbar-nav ">
+          <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">News</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Entertainment</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link " href="#">Life</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link " href="#">Video</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link " href="#">Shopping</a>
+          </li>        
+          <li class="nav-item">
+              <a class="nav-link " href="#">Shopping</a>
+          </li> 
+          <li class="nav-item">
+              <a class="nav-link " href="#">Shopping</a>
+          </li>
+      </ul>
+  </div>
+  <div class="d-flex w-100 order-0">
+      <div class="w-100">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+      </div>
+      <a class="navbar-brand text-center w-100 position-sticky" href="#">Navbar</a>
+      <span class="w-100"></span>
+  </div>
+  <span class="w-100"></span>
+</nav>
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+
+
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
      
-  <div class="container-fluid mx-auto">
+  <div class="container-fluid ">
     <a class="navbar-brand mx-auto  " href="#">Navbar</a>
-  
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> 
-   </div>
+     <div class="container text-left">
+      <button class="navbar-toggler .text-left" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button> 
+     </div>
+    
+   </div> -->
   
     <!-- Use flexbox utility classes to change how the child elements are justified   -->
-   <div class="collapse navbar-collapse  navbar-toggler" id="navbarToggle">
-    <ul class=" nav navbar-nav ">
+   <!-- <div class="collapse navbar-collapse " id="navbarToggle">
+    <ul class="  navbar-nav ">
       <li class="nav-item">
         <a class="nav-link active" href="#">Home <span class="sr-only"></span></a>
       </li>
@@ -29,8 +73,8 @@
         <a class="nav-link" href="#">Entertainment</a>
       </li>
     </ul>
-  </div>
-      <!-- Show this only lg screens and up   --> --> -->
+  </div> -->
+      <!-- Show this only lg screens and up   --> 
    
     <!-- <div class="collapse navbar-collapse justify-content-end ">
       <ul class="navbar-nav">
@@ -43,5 +87,5 @@
       </ul>
 
     </div> -->
-  </nav>
+  <!-- </nav> -->
   
