Added:setlogo at center

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,91 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="collapse navbar-collapse w-100 order-1 order-lg-0" id="navbarNav">
-      <ul class="navbar-nav ">
-          <li class="nav-item active">
+<nav class="mainNav navbar navbar-expand-md navbar-dark bg-dark flex-column">
+  <div class="w-100 d-flex">
+      <a class="navbar-brand navbar-center mx-md-auto mx-auto d-block" href="#">
+          <img src="img/logo.png" alt="Logo" height="80px" width="auto">
+      </a>
+      <button class="navbar-toggle visible ml-auto order-first " type="button" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      
+  </div>
+  <div class="collapse navbar-collapse">
+      <ul class="navbar-nav text-center">
+          <li class="nav-item">
               <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">News</a>
+              <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Entertainment</a>
+              <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link " href="#">Life</a>
+              <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link " href="#">Video</a>
+              <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link " href="#">Shopping</a>
-          </li>        
-          <li class="nav-item">
-              <a class="nav-link " href="#">Shopping</a>
-          </li> 
-          <li class="nav-item">
-              <a class="nav-link " href="#">Shopping</a>
+              <a class="nav-link" href="#">Contact</a>
           </li>
       </ul>
+      <div class="collapse navbar-collapse float-right ">
+        
+        </div>
   </div>
-  <div class="d-flex w-100 order-0">
-      <div class="w-100">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-      </div>
-      <a class="navbar-brand text-center w-100 position-sticky" href="#">Navbar</a>
-      <span class="w-100"></span>
-  </div>
-  <span class="w-100"></span>
 </nav>
 
 
 
 
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-     
-  <div class="container-fluid ">
-    <a class="navbar-brand mx-auto  " href="#">Navbar</a>
-     <div class="container text-left">
-      <button class="navbar-toggler .text-left" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> 
-     </div>
-    
-   </div> -->
-  
-    <!-- Use flexbox utility classes to change how the child elements are justified   -->
-   <!-- <div class="collapse navbar-collapse " id="navbarToggle">
-    <ul class="  navbar-nav ">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Home <span class="sr-only"></span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">News</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Entertainment</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Entertainment</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Entertainment</a>
-      </li>
-    </ul>
-  </div> -->
-      <!-- Show this only lg screens and up   --> 
-   
-    <!-- <div class="collapse navbar-collapse justify-content-end ">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Join Us</a>
-        </li>
-      </ul>
 
-    </div> -->
-  <!-- </nav> -->
+
+
+
+
+   
+     
+
+    
+  
   
