--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,29 +1,12 @@
- .navbar{ 
- height: 110px; 
-    width: 100%;
-}
+
+ .navbar-toggle-always{
 
 
- .navbar .navbar-brand{ 
-     margin-bottom: 29px; 
-     margin-right: 0; 
-     margin-left: 0; 
-     align-items: center; 
+
+    @media (min-width: 768px){
+      display: block!important;
+    }
+
     
-  }  
-    
-   
-@media (min-width: 992px) {
-    .navbar-expand-lg .navbar-nav {
-        -ms-flex-direction: row;
-        flex-direction: row;
-        margin-top: 30px;
-      }
-    }  
 
-
-
-.navbar .navbar-toggler{
-    
-    
-} 
+  }
