--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <nav class="mainNav navbar navbar-expand-md navbar-dark bg-dark flex-column">
-  <div class="w-100 d-flex">
-      <a class="navbar-brand navbar-center mx-md-auto mx-auto d-block" href="#">
+  <div class="w-100 d-flex ">
+      <a class="navbar-brand navbar-center mx-md-auto mx-auto d-block " href="#">
           <img src="img/logo.png" alt="Logo" height="80px" width="auto">
       </a>
-      <button class="navbar-toggle visible ml-auto order-first " type="button" data-toggle="collapse" data-target=".navbar-collapse">
+      <button class="navbar-toggle visible ml-auto  bg-dark order-first " type="button" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="navbar-toggler-icon"></span>
       </button>
       
