Added:sineup option

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,11 @@
 <!-- Footer -->
 <footer class="bg-dark text-center text-white">
     <!-- Grid container -->
-    <div class="container p-4">
+    <div class="">
       <!-- Section: Social media -->
       <section class="mb-4">
         <!-- Facebook -->
-        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+        <a class="btn btn-outline-light text-white btn-floating m-1" href="#!" role="button"
           ><i class="fab fa-facebook-f"></i
         ></a>
   
@@ -178,8 +178,8 @@
     <!-- Grid container -->
   
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2020 Copyright:
+    <div class="text-center p-3" style="background-color:black">
+      © 2022 Copyright:
       <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
