--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<nav class="mainNav navbar navbar-expand-md navbar-dark bg-dark flex-column">
+<header class="navbar black fix-top">
+    <div class="w-100 ">
+<nav class="mainNav navbar navbar-expand-md navbar-dark bg-dark flex-column height:35px">
   <div class="w-100 d-flex ">
       <a class="navbar-brand navbar-center mx-md-auto mx-auto d-block " href="#">
           <img src="img/logo.png" alt="Logo" height="80px" width="auto">
@@ -7,6 +9,15 @@
           <span class="navbar-toggler-icon"></span>
       </button>
       
+      <div> 
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item"><a class="nav-link" href="new_user"><span class="glyphicon glyphicon-user fontawesome-lock"></span> Sign Up</a></li>
+                <li class="nav-item"><a class="nav-link" href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+        <button style="font-size:24px"> <i class="material-icons">&#xe853;</i></button>
+        
+
+      </div> 
   </div>
   <div class="collapse navbar-collapse">
       <ul class="navbar-nav text-center">
@@ -33,9 +44,12 @@
         
         </div>
   </div>
+
+   
 </nav>
 
-
+</div>
+</header>
 
 
 
