--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-
+/* 
  .navbar-toggle-always{
 
 
@@ -9,4 +9,8 @@
 
     
 
+  } */
+  header{
+    width: 100%;
+    background-color: black;
   }
